@@ -1,3 +1,8 @@
+2001-04-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (mark_transient_subtree):
+	fixed collection of transients on same layer
+
 2001-04-23  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/placement.c (PlaceWindow): Ungrab the pointer when window
